3-backend-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-clusterip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: node
  type: ClusterIP
