5-proxy-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-nodeport
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
